// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reconcile (fixture parity) > first_scan > deltas 1`] = `
{
  "new_count": 4,
  "reopened_count": 0,
  "resolved_count": 1,
}
`;

exports[`reconcile (fixture parity) > first_scan > ledger 1`] = `
{
  "h:b9db6107009435fc": {
    "asset_id": "vm-3",
    "asset_name": "worker-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "GCP",
    "cve": "CVE-2024-3333",
    "epss": null,
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": "{"env": "stage"}",
    "vuln_key": "h:b9db6107009435fc",
  },
  "id:f-1": {
    "asset_id": "vm-1",
    "asset_name": "api-server-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-2024-1111",
    "epss": null,
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-20T12:30:45Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": "123",
    "subscription_name": "prod-sub",
    "tags_json": "{"env": "prod"}",
    "vuln_key": "id:f-1",
  },
  "id:f-2": {
    "asset_id": "vm-2",
    "asset_name": "db-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "Azure",
    "cve": "CVE-2024-2222",
    "epss": null,
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-25T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-05-30T08:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-2",
  },
  "id:f-4": {
    "asset_id": null,
    "asset_name": null,
    "asset_type": null,
    "cloud": null,
    "cve": "CVE-2024-4444",
    "epss": null,
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-4",
  },
}
`;

exports[`reconcile (fixture parity) > first_scan > observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:f-1",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:f-2",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "MEDIUM",
    "status": "OPEN",
    "vuln_key": "h:b9db6107009435fc",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:f-4",
  },
]
`;

exports[`reconcile (fixture parity) > midpoint_disappearance > deltas 1`] = `
{
  "new_count": 0,
  "reopened_count": 0,
  "resolved_count": 2,
}
`;

exports[`reconcile (fixture parity) > midpoint_disappearance > ledger 1`] = `
{
  "h:b9db6107009435fc": {
    "asset_id": "vm-3",
    "asset_name": "worker-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "GCP",
    "cve": "CVE-2024-3333",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-04T18:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": "{"env": "stage"}",
    "vuln_key": "h:b9db6107009435fc",
  },
  "id:f-1": {
    "asset_id": "vm-1",
    "asset_name": "api-server-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-2024-1111",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-20T12:30:45Z",
    "last_scan_id": "2026-06-08T06:00:00Z",
    "last_seen": "2026-06-08T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": "123",
    "subscription_name": "prod-sub",
    "tags_json": "{"env": "prod"}",
    "vuln_key": "id:f-1",
  },
  "id:f-2": {
    "asset_id": "vm-2",
    "asset_name": "db-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "Azure",
    "cve": "CVE-2024-2222",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-25T00:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-05-30T08:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-2",
  },
  "id:f-4": {
    "asset_id": null,
    "asset_name": null,
    "asset_type": null,
    "cloud": null,
    "cve": "CVE-2024-4444",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-04T18:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-4",
  },
}
`;

exports[`reconcile (fixture parity) > midpoint_disappearance > observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:f-1",
  },
  {
    "present": 0,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "vuln_key": "h:b9db6107009435fc",
  },
  {
    "present": 0,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:f-4",
  },
]
`;

exports[`reconcile (fixture parity) > prev_by_severity > deltas 1`] = `
{
  "new_count": 0,
  "reopened_count": 0,
  "resolved_count": 0,
}
`;

exports[`reconcile (fixture parity) > prev_by_severity > ledger 1`] = `
{
  "h:b9db6107009435fc": {
    "asset_id": "vm-3",
    "asset_name": "worker-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "GCP",
    "cve": "CVE-2024-3333",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": "{"env": "stage"}",
    "vuln_key": "h:b9db6107009435fc",
  },
  "id:f-1": {
    "asset_id": "vm-1",
    "asset_name": "api-server-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-2024-1111",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-18T00:00:00Z",
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": "123",
    "subscription_name": "prod-sub",
    "tags_json": "{"env": "prod"}",
    "vuln_key": "id:f-1",
  },
  "id:f-2": {
    "asset_id": "vm-2",
    "asset_name": "db-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "Azure",
    "cve": "CVE-2024-2222",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-25T00:00:00Z",
    "last_scan_id": "2026-06-08T06:00:00Z",
    "last_seen": "2026-06-08T06:00:00Z",
    "reopened_count": 1,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-2",
  },
  "id:f-4": {
    "asset_id": null,
    "asset_name": null,
    "asset_type": null,
    "cloud": null,
    "cve": "CVE-2024-4444",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-4",
  },
}
`;

exports[`reconcile (fixture parity) > prev_by_severity > observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:f-1",
  },
]
`;

exports[`reconcile (fixture parity) > resolved_relisted > deltas 1`] = `
{
  "new_count": 0,
  "reopened_count": 0,
  "resolved_count": 2,
}
`;

exports[`reconcile (fixture parity) > resolved_relisted > ledger 1`] = `
{
  "h:b9db6107009435fc": {
    "asset_id": "vm-3",
    "asset_name": "worker-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "GCP",
    "cve": "CVE-2024-3333",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": "{"env": "stage"}",
    "vuln_key": "h:b9db6107009435fc",
  },
  "id:f-1": {
    "asset_id": "vm-1",
    "asset_name": "api-server-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-2024-1111",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-18T00:00:00Z",
    "last_scan_id": "2026-06-08T06:00:00Z",
    "last_seen": "2026-06-08T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-15T06:00:00Z",
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "subscription_ext_id": "123",
    "subscription_name": "prod-sub",
    "tags_json": "{"env": "prod"}",
    "vuln_key": "id:f-1",
  },
  "id:f-2": {
    "asset_id": "vm-2",
    "asset_name": "db-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "Azure",
    "cve": "CVE-2024-2222",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-25T00:00:00Z",
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "reopened_count": 1,
    "resolution_src": "api",
    "resolved_at": "2026-05-30T08:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-2",
  },
  "id:f-4": {
    "asset_id": null,
    "asset_name": null,
    "asset_type": null,
    "cloud": null,
    "cve": "CVE-2024-4444",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-4",
  },
}
`;

exports[`reconcile (fixture parity) > resolved_relisted > observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:f-2",
  },
  {
    "present": 0,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "vuln_key": "id:f-1",
  },
]
`;

exports[`reconcile (fixture parity) > scope_guard > deltas 1`] = `
{
  "new_count": 0,
  "reopened_count": 1,
  "resolved_count": 1,
}
`;

exports[`reconcile (fixture parity) > scope_guard > ledger 1`] = `
{
  "h:b9db6107009435fc": {
    "asset_id": "vm-3",
    "asset_name": "worker-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "GCP",
    "cve": "CVE-2024-3333",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "MEDIUM",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": "{"env": "stage"}",
    "vuln_key": "h:b9db6107009435fc",
  },
  "id:f-1": {
    "asset_id": "vm-1",
    "asset_name": "api-server-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-2024-1111",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-20T12:30:45Z",
    "last_scan_id": "2026-06-08T06:00:00Z",
    "last_seen": "2026-06-08T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": "123",
    "subscription_name": "prod-sub",
    "tags_json": "{"env": "prod"}",
    "vuln_key": "id:f-1",
  },
  "id:f-2": {
    "asset_id": "vm-2",
    "asset_name": "db-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "Azure",
    "cve": "CVE-2024-2222",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-08T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "last_scan_id": "2026-06-08T06:00:00Z",
    "last_seen": "2026-06-08T06:00:00Z",
    "reopened_count": 1,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-2",
  },
  "id:f-4": {
    "asset_id": null,
    "asset_name": null,
    "asset_type": null,
    "cloud": null,
    "cve": "CVE-2024-4444",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-4",
  },
}
`;

exports[`reconcile (fixture parity) > scope_guard > observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:f-1",
  },
  {
    "present": 1,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:f-2",
  },
  {
    "present": 0,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:f-4",
  },
]
`;

exports[`reconcile (fixture parity) > second_scan > deltas 1`] = `
{
  "new_count": 0,
  "reopened_count": 1,
  "resolved_count": 2,
}
`;

exports[`reconcile (fixture parity) > second_scan > ledger 1`] = `
{
  "h:b9db6107009435fc": {
    "asset_id": "vm-3",
    "asset_name": "worker-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "GCP",
    "cve": "CVE-2024-3333",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": "{"env": "stage"}",
    "vuln_key": "h:b9db6107009435fc",
  },
  "id:f-1": {
    "asset_id": "vm-1",
    "asset_name": "api-server-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-2024-1111",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-18T00:00:00Z",
    "last_scan_id": "2026-06-08T06:00:00Z",
    "last_seen": "2026-06-08T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": "123",
    "subscription_name": "prod-sub",
    "tags_json": "{"env": "prod"}",
    "vuln_key": "id:f-1",
  },
  "id:f-2": {
    "asset_id": "vm-2",
    "asset_name": "db-1",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "Azure",
    "cve": "CVE-2024-2222",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-05-25T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "last_scan_id": "2026-06-08T06:00:00Z",
    "last_seen": "2026-06-08T06:00:00Z",
    "reopened_count": 1,
    "resolution_src": null,
    "resolved_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-2",
  },
  "id:f-4": {
    "asset_id": null,
    "asset_name": null,
    "asset_type": null,
    "cloud": null,
    "cve": "CVE-2024-4444",
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:f-4",
  },
}
`;

exports[`reconcile (fixture parity) > second_scan > observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:f-1",
  },
  {
    "present": 1,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:f-2",
  },
  {
    "present": 0,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "vuln_key": "h:b9db6107009435fc",
  },
  {
    "present": 0,
    "scan_id": "2026-06-08T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:f-4",
  },
]
`;

exports[`tagsJson (fixture parity) > case 0 1`] = `"{"env": "prod", "team": "core"}"`;

exports[`tagsJson (fixture parity) > case 1 1`] = `"{"a": "1", "b": "2"}"`;

exports[`tagsJson (fixture parity) > case 2 1`] = `"{"env": "prod", "team": "core"}"`;

exports[`tagsJson (fixture parity) > case 3 1`] = `null`;

exports[`tagsJson (fixture parity) > case 4 1`] = `null`;

exports[`tagsJson (fixture parity) > case 5 1`] = `null`;

exports[`tagsJson (fixture parity) > case 6 1`] = `null`;

exports[`tagsJson (fixture parity) > case 7 1`] = `"{"flag": true, "num": 3}"`;

exports[`tagsJson (fixture parity) > case 8 1`] = `"{"uni": "ünïcode"}"`;
